[feature] Refactor inspection files
